<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="warning_settings">
   
    <PreferenceCategory
            android:title="@string/pref_category_warnings">
    
	    <CheckBoxPreference
			android:key="PREF_FRIEND_WARNING"
			android:title="@string/pref_friend_warning_title"
			android:defaultValue="true"/>
	    
	    <ListPreference
	        android:key="PREF_YAKINLIK_OLCUSU"
	        android:title="@string/pref_distance_title"
	        android:summary="@string/pref_distance_summary"
	        android:defaultValue="1"
	        android:dialogTitle="@string/pref_distance_title"
	        android:entries="@array/distance_measurement"
	        android:entryValues="@array/distance_mesurement_values"/>
	
	</PreferenceCategory>
    
    
</PreferenceScreen> 