<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/usernameDialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/addAddFriendDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" 
            android:layout_weight=".5"/>
        
        <Button
            android:id="@+id/cancelAddFriendDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" 
            android:layout_weight=".5"/>
        
    </LinearLayout>

</LinearLayout>